feat(flink): apply M1, M7, M2a, M2b production hardening
Applies the first four items of the agreed apply-order from
memory/project_flink_production.md. Config-only; nothing deployed or
observed running. Verified with `docker compose config --quiet` and
`bash -n flink/run-job.sh`.

M1  explicit restart strategy on the jobmanager. Flink defaults
    restart-strategy.type to `disable` only because checkpointing is off,
    so today the first exception in any job kills it permanently. Backoff
    is longer than Flink's defaults (10s -> 5min) because with no
    checkpoints every restart costs a full resync.

M7  restart: unless-stopped and a json-file 100m x 5 logging block on the
    JobManager and every TaskManager. No other service touched.

M2a taskmanager.memory.process.size: 8g, managed.fraction: 0.1 and
    env.java.opts.taskmanager on the TaskManager. The image default of
    1728m left roughly 384 MB of task heap shared by all 8 jobs.

M2b single taskmanager (8 slots) -> taskmanager-1..4 at 3 slots each.
    8 jobs at parallelism 1 filled the single TM exactly; 12 slots leaves
    four spare, and four JVMs mean one OOM takes down ~2 jobs rather than
    the whole pipeline.

M2b renamed the container, which broke flink/run-job.sh: it hard-coded
`docker logs ... taskmanager` in three places for its failure diagnostics.
Replaced with a TASKMANAGERS array and a tm_logs helper reading all four.

NOT VERIFIED AGAINST THE TARGET HOST: 4 x 8g plus the JobManager is ~34g
of Flink alone and host RAM was never inspected. Outstanding verification
(kill-a-job restart, the TM startup memory breakdown, 12 free slots) is
tracked in todo.md.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>